theming home_slider

--- a/sites/all/themes/drupalkashmir/sass/screen.scss
+++ b/sites/all/themes/drupalkashmir/sass/screen.scss
@@ -41,10 +41,10 @@
     $EXTENSIONS
 \*--------------*/
 @import "sections/header";
+@import "extensions/home";
 // @import "extensions/footer";
 // @import "extensions/global";
 // @import "extensions/sidebar";
-// @import "extensions/home";
 // @import "extensions/blog";
 // @import "extensions/services";
 // @import "extensions/team";
