Fix partial path

--- a/sites/all/themes/drupalkashmir/sass/screen.scss
+++ b/sites/all/themes/drupalkashmir/sass/screen.scss
@@ -41,7 +41,7 @@
     $EXTENSIONS
 \*--------------*/
 @import "sections/header";
-@import "extensions/home";
+@import "sections/home";
 // @import "extensions/footer";
 // @import "extensions/global";
 // @import "extensions/sidebar";
