comment views image field

--- a/sites/all/themes/drupalkashmir/sass/sections/_home.scss
+++ b/sites/all/themes/drupalkashmir/sass/sections/_home.scss
@@ -6,7 +6,7 @@
 
     }
 
-.views-field-field-slide-image
+/*.views-field-field-slide-image
     {
         .field-content
         {
@@ -14,7 +14,7 @@
 
 
         }
-    }
+    }*/
 //
 .views-field-field-slide-text
     {
