--- a/sites/all/themes/drupalkashmir/sass/sections/_home.scss
+++ b/sites/all/themes/drupalkashmir/sass/sections/_home.scss
@@ -6,16 +6,16 @@
 
     }
 
-/*.views-field-field-slide-image
+.views-field-field-slide-image
     {
         .field-content
         {
-            position : absolute;
+            position : relative;
 
 
         }
-    }*/
-//
+    }
+
 .views-field-field-slide-text
     {
         .field-content
