--- a/sites/all/themes/drupalkashmir/sass/sections/_home.scss
+++ b/sites/all/themes/drupalkashmir/sass/sections/_home.scss
@@ -6,7 +6,7 @@
 
     }
 
-.views-field-field-slide-image
+/*.views-field-field-slide-image
     {
         .field-content
         {
@@ -16,7 +16,7 @@
         }
     }
 
-.views-field-field-slide-text
+*/.views-field-field-slide-text
     {
         .field-content
         {
