--- a/sites/all/themes/drupalkashmir/sass/sections/_home.scss
+++ b/sites/all/themes/drupalkashmir/sass/sections/_home.scss
@@ -12,3 +12,15 @@
 
     }
 }
+
+ .views-field-field-slide-text
+ {
+     .field-content
+     {
+        position: absolute;
+        background: grey;
+        width: 318px;
+        top: 133px;
+        left: 100px;
+     }
+}
