--- a/sites/all/themes/drupalkashmir/sass/sections/_home.scss
+++ b/sites/all/themes/drupalkashmir/sass/sections/_home.scss
@@ -18,9 +18,9 @@
      .field-content
      {
         position: absolute;
-        background: grey;
         width: 318px;
-        top: 133px;
+        top: 73px;
         left: 100px;
+        color: whitesmoke;
      }
 }
