--- a/sites/all/themes/drupalkashmir/sass/sections/_home.scss
+++ b/sites/all/themes/drupalkashmir/sass/sections/_home.scss
@@ -22,5 +22,7 @@
         top: 73px;
         left: 100px;
         color: whitesmoke;
+        font-size: 36px;
+        font-weight: bold;
      }
 }
