--- a/sites/all/themes/drupalkashmir/sass/sections/_home.scss
+++ b/sites/all/themes/drupalkashmir/sass/sections/_home.scss
@@ -2,13 +2,26 @@
 {
     .field-content
     {
-        width: 200px;
+        width: 300px;
         position: absolute;
         top: 64px;
         background: grey;
         padding-left: 20px;
         right:0px;
+        height: 142px;
 
+        p:nth-child(1)
+        {
+            float:left;
+
+
+        }
+
+        p:nth-child(2)
+        {
+            float:left;
+            clear:both;
+        }
 
     }
 }
