--- a/sites/all/themes/drupalkashmir/stylesheets/screen.css
+++ b/sites/all/themes/drupalkashmir/stylesheets/screen.css
@@ -2342,12 +2342,20 @@ nav[role="navigation"] li a {
 }
 
 .views-field-field-event-text-image .field-content {
-  width: 200px;
+  width: 300px;
   position: absolute;
   top: 64px;
   background: grey;
   padding-left: 20px;
   right: 0px;
+  height: 142px;
+}
+.views-field-field-event-text-image .field-content p:nth-child(1) {
+  float: left;
+}
+.views-field-field-event-text-image .field-content p:nth-child(2) {
+  float: left;
+  clear: both;
 }
 
 .views-field-field-slide-text .field-content {
