--- a/sites/all/themes/drupalkashmir/sass/sections/_home.scss
+++ b/sites/all/themes/drupalkashmir/sass/sections/_home.scss
@@ -23,6 +23,14 @@
             clear:both;
         }
 
+        p:nth-child(3)
+        {
+            img
+            {
+               float: right;
+               margin-top:-23px;
+            }
+        }
     }
 }
 
