slideshow text css

--- a/sites/all/themes/drupalkashmir/sass/sections/_home.scss
+++ b/sites/all/themes/drupalkashmir/sass/sections/_home.scss
@@ -13,9 +13,13 @@
         p:nth-child(1)
         {
             float:left;
-
-
+            color: whiteSmoke;
+            font-size: 36px;
+            line-height: 1;
         }
+
+
+
 
         p:nth-child(2)
         {
