--- a/sites/all/themes/drupalkashmir/sass/sections/_home.scss
+++ b/sites/all/themes/drupalkashmir/sass/sections/_home.scss
@@ -27,13 +27,18 @@
             clear:both;
         }
 
+        p:nth-child(3)
+        {
+            clear: both;
+            float: left;
+        }
 
         p:nth-child(4)
         {
             img
             {
                float: right;
-               margin-top:-23px;
+               margin-top:-69px;
             }
         }
     }
