--- a/sites/all/themes/drupalkashmir/sass/sections/_home.scss
+++ b/sites/all/themes/drupalkashmir/sass/sections/_home.scss
@@ -57,3 +57,13 @@
         font-weight: bold;
      }
 }
+
+ .views_slideshow_slide
+  {
+    max-width: 100%!important;
+    width: 100% !Important;
+  }
+#views_slideshow_cycle_teaser_section_home_slideshow-block
+  {
+    max-width: 100% !important;
+  }
