--- a/sites/all/themes/drupalkashmir/sass/sections/_home.scss
+++ b/sites/all/themes/drupalkashmir/sass/sections/_home.scss
@@ -23,8 +23,13 @@
 
         p:nth-child(2)
         {
-            float:left;
-            clear:both;
+                float:left;
+                clear:both;
+                color: #F8756A;
+               font-size: 27px;
+               line-height: 1;
+               margin-top: -12px;
+
         }
 
         p:nth-child(3)
