--- a/sites/all/themes/drupalkashmir/sass/sections/_home.scss
+++ b/sites/all/themes/drupalkashmir/sass/sections/_home.scss
@@ -36,6 +36,10 @@
         {
             clear: both;
             float: left;
+            font-size: 23px;
+            margin-top: -12px;
+            color: #F8576A;
+
         }
 
         p:nth-child(4)
