theming event on slideshow

--- a/sites/all/themes/drupalkashmir/sass/sections/_home.scss
+++ b/sites/all/themes/drupalkashmir/sass/sections/_home.scss
@@ -9,6 +9,9 @@
         padding-left: 20px;
         right:0px;
         height: 142px;
+        background: rgb(54, 25, 25); /* Fall-back for browsers that don't
+                                    support rgba */
+        background: rgba(54, 25, 25, .5);
 
         p:nth-child(1)
         {
