--- a/sites/all/themes/drupalkashmir/stylesheets/screen.css
+++ b/sites/all/themes/drupalkashmir/stylesheets/screen.css
@@ -2349,6 +2349,10 @@ nav[role="navigation"] li a {
   padding-left: 20px;
   right: 0px;
   height: 142px;
+  background: #361919;
+ /* Fall-back for browsers that don't
+support rgba */
+  background: rgba(54, 25, 25, 0.5);
 }
 .views-field-field-event-text-image .field-content p:nth-child(1) {
   float: left;
