--- a/sites/all/themes/drupalkashmir/sass/screen.scss
+++ b/sites/all/themes/drupalkashmir/sass/screen.scss
@@ -42,7 +42,7 @@
 \*--------------*/
 @import "sections/header";
 @import "sections/home";
-//@import "extensions/footer";
+@import "sections/footer";
 // @import "extensions/global";
 // @import "extensions/sidebar";
 // @import "extensions/blog";
