--- a/sites/all/themes/drupalkashmir/sass/sections/_footer.scss
+++ b/sites/all/themes/drupalkashmir/sass/sections/_footer.scss
@@ -13,4 +13,11 @@ footer[role="contentinfo"]
         width: 46%;
         margin-left: 117px;
         color: whiteSmoke;
+
+        li
+        {
+            list-style-type: none;
+        }
     }
+
+
