--- a/sites/all/themes/drupalkashmir/stylesheets/screen.css
+++ b/sites/all/themes/drupalkashmir/stylesheets/screen.css
@@ -2409,6 +2409,9 @@ footer[role="contentinfo"] {
   margin-left: 117px;
   color: whiteSmoke;
 }
+#block-block-5 li {
+  list-style-type: none;
+}
 
 /*--------------*\
     $MQ
