--- a/sites/all/themes/drupalkashmir/sass/sections/_footer.scss
+++ b/sites/all/themes/drupalkashmir/sass/sections/_footer.scss
@@ -6,7 +6,7 @@ footer[role="contentinfo"]
 
     }
 
-#block-block-5
+#block-block-5 /*block for contact us */
 
     {
 
@@ -18,6 +18,23 @@ footer[role="contentinfo"]
         {
             list-style-type: none;
         }
+
+
+
+        p:nth-child(1)
+        {
+            padding-top: 51px;
+            font-size: 1.5em;
+            font-family: "Maven Pro", Helvetica, Arial, sans-serif;
+            font-weight: 900;
+            text-transform: uppercase;
+            letter-spacing: 0.03125em;
+            line-height: 1em;
+            margin-bottom: 0.8em;
+        }
+
     }
+
+
 
 
