theming contact block

--- a/sites/all/themes/drupalkashmir/sass/sections/_footer.scss
+++ b/sites/all/themes/drupalkashmir/sass/sections/_footer.scss
@@ -20,8 +20,13 @@ footer[role="contentinfo"]
         }
 
 
+        .contextual-links-processed
+        {
 
-        p:nth-child(1)
+
+        }
+
+        p
         {
             padding-top: 51px;
             font-size: 1.5em;
@@ -32,6 +37,8 @@ footer[role="contentinfo"]
             line-height: 1em;
             margin-bottom: 0.8em;
         }
+
+
 
     }
 
