--- a/sites/all/themes/drupalkashmir/stylesheets/screen.css
+++ b/sites/all/themes/drupalkashmir/stylesheets/screen.css
@@ -2412,7 +2412,7 @@ footer[role="contentinfo"] {
 #block-block-5 li {
   list-style-type: none;
 }
-#block-block-5 p:nth-child(1) {
+#block-block-5 p {
   padding-top: 51px;
   font-size: 1.5em;
   font-family: "Maven Pro", Helvetica, Arial, sans-serif;
