--- a/sites/all/themes/drupalkashmir/sass/sections/_footer.scss
+++ b/sites/all/themes/drupalkashmir/sass/sections/_footer.scss
@@ -8,7 +8,7 @@ footer[role="contentinfo"]
 
     }
 
-.contextual-links-region/*class for contact us */
+ #block-block-5/*block for contact us */
 
     {
 
