--- a/sites/all/themes/drupalkashmir/sass/sections/_footer.scss
+++ b/sites/all/themes/drupalkashmir/sass/sections/_footer.scss
@@ -28,7 +28,7 @@ footer[role="contentinfo"]
 
         }
 
-        p:nth-child(1)
+         .cont
         {
             padding-top: 51px;
             font-size: 1.5em;
