display none mailchimp title

--- a/sites/all/themes/drupalkashmir/sass/sections/_footer.scss
+++ b/sites/all/themes/drupalkashmir/sass/sections/_footer.scss
@@ -40,6 +40,16 @@ footer[role="contentinfo"]
             margin-bottom: 0.8em;
         }
 
+        #block-mailchimp-lists-drupal-kashmir-newsletter
+
+        {
+           .title
+              {
+                display: none;
+              }
+
+        }
+
 
 
     }
