debug mailchimp title

--- a/sites/all/themes/drupalkashmir/sass/sections/_footer.scss
+++ b/sites/all/themes/drupalkashmir/sass/sections/_footer.scss
@@ -43,7 +43,7 @@ footer[role="contentinfo"]
         #block-mailchimp-lists-drupal-kashmir-newsletter
 
         {
-           .title
+             h2
               {
                 display: none;
               }
