--- a/sites/all/themes/drupalkashmir/stylesheets/screen.css
+++ b/sites/all/themes/drupalkashmir/stylesheets/screen.css
@@ -2422,7 +2422,8 @@ footer[role="contentinfo"] {
   line-height: 1em;
   margin-bottom: 0.8em;
 }
-#block-block-5 #block-mailchimp-lists-drupal-kashmir-newsletter h2 {
+
+#block-mailchimp-lists-drupal-kashmir-newsletter h2 {
   display: none;
 }
 
