postion mailchimp block

--- a/sites/all/themes/drupalkashmir/sass/sections/_footer.scss
+++ b/sites/all/themes/drupalkashmir/sass/sections/_footer.scss
@@ -48,7 +48,14 @@ footer[role="contentinfo"]
 
     #block-mailchimp-lists-drupal-kashmir-newsletter
 
-        {
+        {   width: 25%;
+            float: right;
+            top: -197px;
+            left: -57px;
+
+
+
+
              h2
               {
                 display: none;
