--- a/sites/all/themes/drupalkashmir/stylesheets/screen.css
+++ b/sites/all/themes/drupalkashmir/stylesheets/screen.css
@@ -2423,6 +2423,12 @@ footer[role="contentinfo"] {
   margin-bottom: 0.8em;
 }
 
+#block-mailchimp-lists-drupal-kashmir-newsletter {
+  width: 25%;
+  float: right;
+  top: -197px;
+  left: -57px;
+}
 #block-mailchimp-lists-drupal-kashmir-newsletter h2 {
   display: none;
 }
