--- a/sites/all/themes/drupalkashmir/sass/sections/_footer.scss
+++ b/sites/all/themes/drupalkashmir/sass/sections/_footer.scss
@@ -63,6 +63,15 @@ footer[role="contentinfo"]
 
         }
 
+   #edit-mailchimp-lists-mailchimp-drupal-kashmir-newsletter-title
+
+        {
+
+            color: whiteSmoke;
+
+            font-size: 18px;
+        }
+
 
 
 
