--- a/sites/all/themes/drupalkashmir/stylesheets/screen.css
+++ b/sites/all/themes/drupalkashmir/stylesheets/screen.css
@@ -2438,6 +2438,10 @@ footer[role="contentinfo"] {
   font-size: 18px;
 }
 
+.required {
+  color: whitesmoke;
+}
+
 /*--------------*\
     $MQ
 \*--------------*/
