theming about-us

--- a/sites/all/themes/drupalkashmir/sass/sections/_footer.scss
+++ b/sites/all/themes/drupalkashmir/sass/sections/_footer.scss
@@ -82,5 +82,11 @@ footer[role="contentinfo"]
 
 
 
-
+#block-block-5 /* block for about us*/
+       {
+            width: 46%;
+            margin-left: 117px;
+            color: whiteSmoke;
+            background: #3C3C3B;
+       }
 
