--- a/sites/all/themes/drupalkashmir/sass/sections/_footer.scss
+++ b/sites/all/themes/drupalkashmir/sass/sections/_footer.scss
@@ -88,5 +88,6 @@ footer[role="contentinfo"]
             margin-left: 117px;
             color: whiteSmoke;
             background: #3C3C3B;
+            top: 112px;
        }
 
