--- a/sites/all/themes/drupalkashmir/stylesheets/screen.css
+++ b/sites/all/themes/drupalkashmir/stylesheets/screen.css
@@ -2447,6 +2447,7 @@ footer[role="contentinfo"] {
   margin-left: 117px;
   color: whiteSmoke;
   background: #3C3C3B;
+  top: 112px;
 }
 
 /*--------------*\
