--- a/sites/all/themes/drupalkashmir/stylesheets/screen.css
+++ b/sites/all/themes/drupalkashmir/stylesheets/screen.css
@@ -2450,6 +2450,12 @@ footer[role="contentinfo"] {
   top: 112px;
 }
 
+#block-block-10 {
+  width: 46%;
+  margin-left: 117px;
+  color: whiteSmoke;
+}
+
 /*--------------*\
     $MQ
 \*--------------*/
