theming primary footer

--- a/sites/all/themes/drupalkashmir/sass/sections/_footer.scss
+++ b/sites/all/themes/drupalkashmir/sass/sections/_footer.scss
@@ -98,3 +98,9 @@ footer[role="contentinfo"]
             color: whiteSmoke;
 
         }
+.primary-footer
+        {
+            background: #3C3C3B;
+            height: 265px;
+            margin-top: 16px;
+        }
