theming primary footer

--- a/sites/all/themes/drupalkashmir/sass/sections/_footer.scss
+++ b/sites/all/themes/drupalkashmir/sass/sections/_footer.scss
@@ -98,7 +98,7 @@ footer[role="contentinfo"]
             color: whiteSmoke;
 
         }
-.primary-footer
+.primary_footer
         {
             background: #3C3C3B;
             height: 265px;
