--- a/sites/all/themes/drupalkashmir/sass/sections/_footer.scss
+++ b/sites/all/themes/drupalkashmir/sass/sections/_footer.scss
@@ -97,6 +97,19 @@ footer[role="contentinfo"]
             margin-left: 117px;
             color: whiteSmoke;
 
+            h2
+                {
+                    padding-top: 51px;
+                    font-size: 1.5em;
+                    font-family: "Maven Pro", Helvetica, Arial, sans-serif;
+                    font-weight: 900;
+                    text-transform: uppercase;
+                    letter-spacing: 0.03125em;
+                    line-height: 1em;
+                    margin-bottom: 0.8em;
+
+                }
+
         }
 .primary_footer
         {
