theming sponsors block

--- a/sites/all/themes/drupalkashmir/sass/sections/_footer.scss
+++ b/sites/all/themes/drupalkashmir/sass/sections/_footer.scss
@@ -5,6 +5,7 @@ footer[role="contentinfo"]
 
         background: #F5876A;
         height: 533px;
+        margin: -7px;
 
     }
 
@@ -121,3 +122,18 @@ footer[role="contentinfo"]
 a{
     color: grey;
 }
+
+#block-block-10
+
+        {
+            width: 30%;
+            float: right;
+            bottom: 235px;
+
+
+            li
+            {  list-style-type: none;
+
+            }
+
+        }
