--- a/sites/all/themes/drupalkashmir/sass/sections/_footer.scss
+++ b/sites/all/themes/drupalkashmir/sass/sections/_footer.scss
@@ -139,7 +139,7 @@ a{
             h2
             {
 
-            padding-top: 51px;
+            padding-top: 22px;
             font-size: 1.5em;
             font-family: "Maven Pro", Helvetica, Arial, sans-serif;
             font-weight: 900;
@@ -147,6 +147,7 @@ a{
             letter-spacing: 0.03125em;
             line-height: 1em;
             margin-bottom: 0.8em;
+            color: whitesmoke;
             }
 
         }
