--- a/sites/all/themes/drupalkashmir/stylesheets/screen.css
+++ b/sites/all/themes/drupalkashmir/stylesheets/screen.css
@@ -2486,7 +2486,7 @@ a {
   list-style-type: none;
 }
 #block-block-11 h2 {
-  padding-top: 51px;
+  padding-top: 22px;
   font-size: 1.5em;
   font-family: "Maven Pro", Helvetica, Arial, sans-serif;
   font-weight: 900;
@@ -2494,6 +2494,7 @@ a {
   letter-spacing: 0.03125em;
   line-height: 1em;
   margin-bottom: 0.8em;
+  color: whitesmoke;
 }
 
 /*--------------*\
