--- a/sites/all/themes/drupalkashmir/sass/sections/_home.scss
+++ b/sites/all/themes/drupalkashmir/sass/sections/_home.scss
@@ -80,3 +80,12 @@
     max-width: 100% !important;
     margin-bottom: -27px;
   }
+
+#block-block-12
+  {
+    width:20%;
+    padding-left: 117px;
+
+
+
+  }
