--- a/sites/all/themes/drupalkashmir/sass/sections/_home.scss
+++ b/sites/all/themes/drupalkashmir/sass/sections/_home.scss
@@ -84,8 +84,17 @@
 #block-block-12
   {
     width:30%;
-    padding-left: 117px;
+    margin-left: 117px;
 
 
 
+  }
+
+#block-block-13
+  {
+
+    width: 30%;
+    top: -272px;
+    float: right;
+    right: 397px;
   }
