add theming for guide block

--- a/sites/all/themes/drupalkashmir/sass/sections/_home.scss
+++ b/sites/all/themes/drupalkashmir/sass/sections/_home.scss
@@ -99,3 +99,12 @@
     right: 329px;
 
   }
+
+#block-block-14
+  {
+    width: 20%;
+    float: right;
+    bottom: 218px;
+    left: 424px;
+
+  }
