--- a/sites/all/themes/drupalkashmir/stylesheets/screen.css
+++ b/sites/all/themes/drupalkashmir/stylesheets/screen.css
@@ -2412,6 +2412,13 @@ support rgba */
   right: 329px;
 }
 
+#block-block-14 {
+  width: 20%;
+  float: right;
+  bottom: 218px;
+  left: 424px;
+}
+
 footer[role="contentinfo"] {
   background: #F5876A;
   height: 533px;
