theming news block

--- a/sites/all/themes/drupalkashmir/sass/sections/_home.scss
+++ b/sites/all/themes/drupalkashmir/sass/sections/_home.scss
@@ -108,3 +108,11 @@
     left: 424px;
 
   }
+
+
+#block-views-drupal-news-block
+  {
+      width: 30%;
+      border-right: grey solid;
+        margin-left: 117px;
+  }
