add css code karate

--- a/sites/all/themes/drupalkashmir/sass/sections/_footer.scss
+++ b/sites/all/themes/drupalkashmir/sass/sections/_footer.scss
@@ -130,6 +130,7 @@ a{
             float: right;
             bottom: 235px;
             clear: both;
+            margin-top: -240px;
 
 
             li
