--- a/sites/all/themes/drupalkashmir/sass/sections/_home.scss
+++ b/sites/all/themes/drupalkashmir/sass/sections/_home.scss
@@ -116,3 +116,14 @@
       border-right: grey solid;
         margin-left: 117px;
   }
+
+#block-views-code-karate-block
+{
+
+  width: 30%;
+
+display: inline-block;
+float: right;
+bottom: 228px;
+right: -66px;
+}
