--- a/sites/all/themes/drupalkashmir/sass/sections/_footer.scss
+++ b/sites/all/themes/drupalkashmir/sass/sections/_footer.scss
@@ -125,7 +125,7 @@ a{
 
 #block-block-11
 
-        {
+        {   top:1em;
             width: 30%;
             float: right;
             bottom: 235px;
