Add panel margin homepage

--- a/sites/all/themes/drupalkashmir/sass/sections/_home.scss
+++ b/sites/all/themes/drupalkashmir/sass/sections/_home.scss
@@ -81,7 +81,8 @@
     margin-bottom: -27px;
   }
 
-#panels-ipe-display-panel-context-page-home-page-home-panel-context
+
+.panel-flexible
 {
   margin: 117px;
 }
