--- a/sites/all/themes/drupalkashmir/stylesheets/screen.css
+++ b/sites/all/themes/drupalkashmir/stylesheets/screen.css
@@ -2400,7 +2400,7 @@ support rgba */
   margin-bottom: -27px;
 }
 
-#panels-ipe-display-panel-context-page-home-page-home-panel-context {
+.panel-flexible {
   margin: 117px;
 }
 
