--- a/sites/all/themes/drupalkashmir/stylesheets/screen.css
+++ b/sites/all/themes/drupalkashmir/stylesheets/screen.css
@@ -2226,6 +2226,11 @@ li {
 /*--------------*\
     $EXTENSIONS
 \*--------------*/
+ul li.leaf {
+  list-style-image: none;
+  list-style-type: none;
+}
+
 .views-field-field-event-text-image .field-content {
   width: 300px;
   position: absolute;
